--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color :red
+    color : rgb(34, 11, 11);
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(168, 144, 144);
 }
